# masm-formatter

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/asm/: SWAPp.masm  example1.masm  example2.masm  example3.masm  faucet.masm
tests/: formatter_tests.rs
tests/expected/: example1_formatted.masm  example2_formatted.masm  example3_formatted.masm  example4_formatted.masm  example5_formatted.masm  example6_formatted.masm  example7_formatted.masm  example8_formatted.masm  example9_formatted.masm
tests/unformatted/: example3.masm  example4.masm  example6.masm  example7.masm  example8.masm  example9.masm
tests/unformatted/nested_dir_test/: example5.masm
