[package]
name = "masm-formatter"
version = "0.1.3"
authors = ["partylikeits1983 <aleqvids@gmail.com>"]
edition = "2021"
description = "A formatter for .masm files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/partylikeits1983/masm-formatter"
keywords = ["formatter", "polygon-miden", "assembly", "masm"]
categories = ["command-line-utilities", "development-tools::formatters"]
homepage = "https://github.com/partylikeits1983/masm-formatter"

[dependencies]
glob = "0.3"
clap = { version = "4.1", features = ["derive"] }
regex = "1"

[[bin]]
name = "cargo-masm-fmt"
path = "src/main.rs"
