[package]
name = "masm-formatter"
version = "0.3.2"
authors = ["partylikeits1983 <aleqvids@gmail.com>"]
edition = "2024"
description = "A formatter for Miden Assembly (.masm) files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/partylikeits1983/masm-formatter"
keywords = ["miden", "zkVM", "assembly", "masm"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/partylikeits1983/masm-formatter"

[dependencies]
glob = "0.3"
clap = { version = "4.1", features = ["derive"] }
regex = "1"
once_cell = "1.20.3"
tempfile = "3.17.1"

[[bin]]
name = "masm-fmt"
path = "src/main.rs"
